--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,62 +8,98 @@
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="30" />
+        android:layout_height="match_parent"
+        android:layout_weight="10" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="40"
+        android:layout_weight="80"
         android:orientation="vertical">
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="15" />
+            android:layout_height="0dp"
+            android:layout_weight="35" />
 
-        <Button
-            android:id="@+id/btnC"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="clear"
-            android:text="clear" />
+            android:layout_height="0dp"
+            android:layout_weight="7">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btnC"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2"
+                android:onClick="clear"
+                android:text="@string/clear" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="5" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_weight="6"
             android:fontFamily="sans-serif-medium"
-            android:text="Number not found "
+            android:text="@string/number_not_found"
             android:textAlignment="center"
             android:textSize="18sp" />
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="5" />
 
-        <Button
-            android:id="@+id/btn"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="randomNum"
-            android:text="Click for number " />
+            android:layout_height="0dp"
+            android:layout_weight="7"
+            android:orientation="horizontal">
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="5"
+                android:onClick="randomNum"
+                android:text="@string/click_for_number" />
+
+            <Space
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+        </LinearLayout>
 
         <Space
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="15" />
+            android:layout_height="0dp"
+            android:layout_weight="35" />
     </LinearLayout>
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="30" />
+        android:layout_height="match_parent"
+        android:layout_weight="10" />
 </LinearLayout>
